--- a/lib/src/coll/Makefile.am
+++ b/lib/src/coll/Makefile.am
@@ -3,8 +3,8 @@ lib_LTLIBRARIES =
 AM_CFLAGS = -I$(srcdir)/../
 
 if ENABLE_COLL
-libcoll_la_SOURCES = rbt.c rbt.h idx.c idx.h idx_priv.h
-libcollinclude_HEADERS = rbt.h idx.h
+libcoll_la_SOURCES = rbt.c rbt.h idx.c idx.h idx_priv.h str_map.c str_map.h
+libcollinclude_HEADERS = rbt.h idx.h str_map.h
 libcollincludedir = $(includedir)/coll
 libcoll_conf = /etc/ld.so.conf.d/libcoll.conf
 lib_LTLIBRARIES += libcoll.la
