--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -23,8 +23,9 @@ OPTION_DEFAULT_ENABLE([coll], [ENABLE_COLL])
 OPTION_DEFAULT_ENABLE([mmalloc], [ENABLE_MMALLOC])
 OPTION_DEFAULT_ENABLE([ovis_ctrl], [ENABLE_OVIS_CTRL])
 OPTION_DEFAULT_ENABLE([ovis_util], [ENABLE_OVIS_UTIL])
-OPTION_DEFAULT_DISABLE([zap], [ENABLE_ZAP])
+OPTION_DEFAULT_ENABLE([zap], [ENABLE_ZAP])
 OPTION_DEFAULT_DISABLE([rdma], [ENABLE_RDMA])
+OPTION_DEFAULT_ENABLE([sock], [ENABLE_SOCK])
 OPTION_DEFAULT_DISABLE([ugni], [ENABLE_UGNI])
 OPTION_DEFAULT_DISABLE([ssl], [ENABLE_SSL])
 OPTION_DEFAULT_DISABLE([zaptest], [ENABLE_ZAPTEST])
@@ -39,4 +40,5 @@ AC_OUTPUT(Makefile
 	  src/ovis_util/Makefile
 	  src/zap/Makefile
 	  src/zap/rdma/Makefile
+	  src/zap/sock/Makefile
 	  src/zap/test/Makefile)
