Redesign the ZAP endpoint state machine.
In addition, this change includes the following:
* destroy function in both zap_rdma and zap_sock
* zap_free function
* ref_get_ep-ref_put_ep fix in both zap_rdma and zap_sock
* updated clean-up path in both zap_rdma and zap_sock
* use shutdown instead of close for active-side zap_close
  * using shutdown RD & WR to prevent long-time wait in the case that the other
    end disappeared
* fix zap_close for the listening endpoint
* endpoint locking for EP state transition
* add zap_test_reconnect for reconnection test
* add zap_test_disconnect for simultaneous disconnection test
* no endpoint reuse in any of the test program
* add zap_event_str utility function

Change-Id: Iab0bbf0a5ca02c178086746a3938dc4c1796ca51
Signed-off-by: Tom Tucker <tom@ogc.us>
Signed-off-by: Narate Taerat <narate@ogc.us>

--- a/lib/src/zap/test/Makefile.am
+++ b/lib/src/zap/test/Makefile.am
@@ -1,6 +1,14 @@
 ACLOCAL_AMFLAGS = -I m4
 sbin_PROGRAMS = zap_test
-AM_CFLAGS = -I$(srcdir)/../
+AM_CFLAGS = -I$(srcdir)/../ -I$(top_srcdir)/src
 
 zap_test_SOURCES = zap_test.c
 zap_test_LDADD = $(builddir)/../libzap.la -lpthread -ldl
+
+sbin_PROGRAMS += zap_test_reconnect
+zap_test_reconnect_SOURCES = zap_test_reconnect.c
+zap_test_reconnect_LDADD = $(builddir)/../libzap.la -lpthread -ldl
+
+sbin_PROGRAMS += zap_test_disconnect
+zap_test_disconnect_SOURCES = zap_test_disconnect.c
+zap_test_disconnect_LDADD = $(builddir)/../libzap.la -lpthread -ldl
