ldms: sampler: Hadoop samplers
ldms samplers:
 - hadoop_namenode
 - hadoop_datanode
 - hadoop_jobtracker
 - hadoop_tasktracker

Hadoop sinks:
 - LdmsSink: send Hadoop metrics to the ldms hadoop samplers
 - LdmsMetricNameSink: collect Hadoop metric names

Change-Id: Idb5e11ddcf5911adaf9c8da87ac994fd661254f7

--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -17,6 +17,10 @@ if ENABLE_LUSTRE
 SUBDIRS += lustre
 endif
 
+if ENABLE_HADOOP
+SUBDIRS += hadoop
+endif
+
 if ENABLE_MEMINFO
 libmeminfo_la_SOURCES = meminfo.c
 libmeminfo_la_LIBADD = $(COMMON_LIBADD)
