--- a/lib/src/coll/Makefile.am
+++ b/lib/src/coll/Makefile.am
@@ -3,7 +3,7 @@ lib_LTLIBRARIES =
 AM_CFLAGS = -I$(srcdir)/../
 
 if ENABLE_COLL
-libcoll_la_SOURCES = rbt.c rbt.h idx.c idx.h idx_priv.h str_map.c str_map.h
+libcoll_la_SOURCES = rbt.c rbt.h idx.c idx.h idx_priv.h str_map.c str_map.h fnv_hash.h
 libcollinclude_HEADERS = rbt.h idx.h str_map.h
 libcollincludedir = $(includedir)/coll
 libcoll_conf = /etc/ld.so.conf.d/libcoll.conf
