--- a/ldms/Makefile.am
+++ b/ldms/Makefile.am
@@ -2,15 +2,40 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = src
 LDMS = $(PACKAGE_NAME)-$(PACKAGE_VERSION)
 LDMS_TARBALL = $(LDMS).tar.gz
+OPV=-$(PACKAGE_VERSION)
 
-.PHONY: rpm
-rpm: dist-gzip
+.PHONY: rpm centos toss doxygen rpm-old
+rpm-old: dist-gzip
 	mkdir -p rpm/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
 	cp $(LDMS_TARBALL) rpm/SOURCES
 	rpmbuild -ba ldms.spec
 
+rpm toss centos: dist-gzip
+	mkdir -p centos/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
+	cp $(LDMS_TARBALL) packaging/ovis-ldms.spec centos/SOURCES
+	rpmbuild --define "_topdir `pwd`/centos" -ba packaging/ovis-ldms.spec
+
 rpm-clean:
-	rm -rf rpm/
+	rm -rf rpm/ centos
 	rm -f $(LDMS_TARBALL)
+
+doc:
+	doxygen Doxyfile
+
+doxygen doxygen/html:
+	doxygen ./Doxyfile
+
+install-data-local: doxygen
+	$(MKDIR_P) $(DESTDIR)$(docdir)$(OPV)/html/search
+	for f in AUTHORS README COPYING ChangeLog ; do \
+		$(INSTALL_DATA) ${srcdir}/$$f $(DESTDIR)$(docdir)$(OPV); \
+	done
+	for f in doxygen/html/* ; do \
+		$(INSTALL_DATA) $$f $(DESTDIR)$(docdir)$(OPV)/html; \
+	done
+	for f in doxygen/html/search/*; do \
+		$(INSTALL_DATA) $$f $(DESTDIR)$(docdir)$(OPV)/html/search; \
+	done
+
 
 clean-local: rpm-clean
