--- a/lib/src/zap/sock/Makefile.am
+++ b/lib/src/zap/sock/Makefile.am
@@ -3,4 +3,5 @@ lib_LTLIBRARIES = libzap_sock.la
 AM_CFLAGS = -I$(srcdir)/../
 
 libzap_sock_la_SOURCES = zap_sock.c zap_sock.h
-libzap_sock_la_LIBADD = -levent -lpthread -levent_pthreads ../libzap.la
+libzap_sock_la_LIBADD = @EVENTLIBS@ -levent -levent_pthreads ../libzap.la
+libzap_sock_la_LDFLAGS = -pthread
