2013-10-30 Benjamin Allan <baallan@sandia.gov>
	* Added configure checks for libevent 2, rdma and infiniband if required by configure options.
	* Upgraded to autoconf 2.63.
	* Updated rpm packaging.
	* Fixed a bunch of automake input bugs
	* added demo builds for rhel5 and ubuntu/debian

Change-Id: I864b61e652a4c73b69f5512a6f16c21547198c97

--- a/ldms/src/core/Makefile.am
+++ b/ldms/src/core/Makefile.am
@@ -10,8 +10,8 @@ ldmscoreincludedir = $(includedir)/ldms
 ldmscoreinclude_HEADERS = ldms.h ldmsd.h ldms_xprt.h ogc_rbt.h
 
 libldms_la_SOURCES = ldms.c ldms_xprt.c ogc_rbt.c ldms_private.h
-libldms_la_CFLAGS = -I@OVIS_LIB_INCDIR@
-libldms_la_LIBADD = -ldl -lpthread -L@OVIS_LIB_LIB64DIR@ -L@OVIS_LIB_LIBDIR@ \
+libldms_la_CFLAGS = @OVIS_LIB_INCDIR_FLAG@
+libldms_la_LIBADD = -ldl -lpthread @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@ \
 		    -lmmalloc
 lib_LTLIBRARIES += libldms.la
 
