--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -1,16 +1,16 @@
 sbin_PROGRAMS = ldmsd ldms_ls ldmsctl
 CORE = ../core
-AM_CFLAGS = -I$(srcdir)/$(CORE) -I@OVIS_LIB_INCDIR@
-AM_LDFLAGS = -L@OVIS_LIB_LIB64DIR@ -L@OVIS_LIB_LIBDIR@
+AM_CFLAGS = -I$(srcdir)/$(CORE) @OVIS_LIB_INCDIR_FLAG@
+AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
 
 ldms_ls_SOURCES = ldms_ls.c
 ldms_ls_LDADD = $(CORE)/libldms.la -lrt -lovis_util
 
 ldmsd_SOURCES = ldmsd.c ldmsd_store.c
 ldmsd_LDADD = $(CORE)/libldms.la
-ldmsd_LDFLAGS = $(AM_LDFLAGS) -L@LIBEVENT_LIB64DIR@ -L@LIBEVENT_LIBDIR@ \
+ldmsd_LDFLAGS = $(AM_LDFLAGS) @LIBEVENT_LIB64DIR_FLAG@ @LIBEVENT_LIBDIR_FLAG@ \
 		-levent -lpthread -levent_pthreads -lovis_util -ldl
-ldmsd_CFLAGS = $(AM_CFLAGS) -I@LIBEVENT_INCDIR@
+ldmsd_CFLAGS = $(AM_CFLAGS) @LIBEVENT_INCDIR_FLAG@
 if ENABLE_YAML
 ldmsd_LDFLAGS += -lyaml
 ldmsd_CFLAGS += -DENABLE_YAML
@@ -24,4 +24,4 @@ endif
 
 ldmsctl_SOURCES = ldmsctl.c
 ldmsctl_LDADD = $(CORE)/libldms.la
-ldmsctl_LDFLAGS = $(AM_LDFLAGS) -lreadline -lovis_ctrl -lovis_util
+ldmsctl_LDFLAGS = $(AM_LDFLAGS) -lreadline -lovis_ctrl -lovis_util @LDFLAGS_READLINE@
