--- a/ldms/src/sampler/hadoop/Makefile.am
+++ b/ldms/src/sampler/hadoop/Makefile.am
@@ -6,7 +6,7 @@ AM_LDFLAGS = -L@OVIS_LIB_LIB64DIR@ -L@OVIS_LIB_LIBDIR@
 
 #hadoop sampler core
 libhadoop_sampler_la_SOURCES = sampler_hadoop.c sampler_hadoop.h
-libhadoop_sampler_la_LIBADD = $(CORE)/libldms.la -lovis_util -lrt
+libhadoop_sampler_la_LIBADD = $(CORE)/libldms.la -lovis_util -lrt -lcoll
 lib_LTLIBRARIES += libhadoop_sampler.la
 
 COMMON_ADD = $(CORE)/libldms.la -lovis_util -lrt \
