ldms: add ME support in ldmsd.
 - Add a new bit flag in the ldms_set structure to indicate the connection
   status of the host collecting the set
 - Add functions to set and get the bit flag in the ldms API
 - Add the update_disconnected function to ldmsd that calls update_complete_cb
   when the host is disconnected.
 - Add the consumer_me plugin as the interface to ME. The plugin is a store
   plugin.

Change-Id: I189de85ea4357a41cedf907463f003dd58ae8d46

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -30,6 +30,10 @@ OPTION_DEFAULT_DISABLE([mysqlbulk], [ENABLE_MYSQLBULK])
 OPTION_DEFAULT_ENABLE([flatfile], [ENABLE_FLATFILE])
 OPTION_DEFAULT_ENABLE([csv], [ENABLE_CSV])
 
+dnl Options for consumer
+OPTION_DEFAULT_DISABLE([me], [ENABLE_ME])
+OPTION_WITH([me], [ME])
+
 dnl Options for sampler
 OPTION_DEFAULT_ENABLE([sampler], [ENABLE_SAMPLER])
 OPTION_DEFAULT_ENABLE([geminfo], [ENABLE_GEMINFO])
