--- a/ldms/src/store/Makefile.am
+++ b/ldms/src/store/Makefile.am
@@ -1,8 +1,9 @@
 lib_LTLIBRARIES =
 CORE = ../core
 AM_CFLAGS = -I$(srcdir)/$(CORE) -I@OVIS_LIB_INCDIR@
-STORE_LIBADD = $(CORE)/libldms.la -lcoll -lovis_util -L@OVIS_LIB_LIB64DIR@ \
-	       -L@OVIS_LIB_LIBDIR@
+STORE_LIBADD = $(CORE)/libldms.la -lcoll -lovis_util \
+		-L@OVIS_LIB_LIB64DIR@ \
+		-L@OVIS_LIB_LIBDIR@
 
 if ENABLE_SOS
 libstore_sos_la_SOURCES = store_sos.c
@@ -38,4 +39,12 @@ libstore_csv_la_SOURCES = store_csv.c
 libstore_csv_la_CFLAGS = $(AM_CFLAGS)
 libstore_csv_la_LIBADD = $(STORE_LIBADD)
 lib_LTLIBRARIES += libstore_csv.la
+endif
+
+if ENABLE_ME
+libconsumer_me_la_SOURCES = consumer_me.c
+libconsumer_me_la_CFLAGS = $(AM_CFLAGS)
+libconsumer_me_la_LDFLAGS = $(AM_LDFLAGS)
+libconsumer_me_la_LIBADD = $(STORE_LIBADD) -lzap
+lib_LTLIBRARIES += libconsumer_me.la
 endif
