ldms: rename geminfo back to kgnilnd since that is the data source
Change-Id: I2258c1b0c8c6eeb6131dee224dcd962408e4b304

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -32,7 +32,7 @@ OPTION_DEFAULT_ENABLE([csv], [ENABLE_CSV])
 
 dnl Options for sampler
 OPTION_DEFAULT_ENABLE([sampler], [ENABLE_SAMPLER])
-OPTION_DEFAULT_ENABLE([geminfo], [ENABLE_GEMINFO])
+OPTION_DEFAULT_ENABLE([kgnilnd], [ENABLE_KGNILND])
 OPTION_DEFAULT_ENABLE([lustre], [ENABLE_LUSTRE])
 OPTION_DEFAULT_ENABLE([meminfo], [ENABLE_MEMINFO])
 OPTION_DEFAULT_ENABLE([perfevent], [ENABLE_PERFEVENT])
